fix content json

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -4,7 +4,7 @@
     "imageUrl": "/project_scrin/pizza.png",
     "imageMiniUrl": "/mini_site_pages/pizza.png",
     "title": "Pizza",
-    "description": "Сайт представляет собой интерактивный прототип интернет-магазина пиццы с функционалом выбора товаров и оформления заказа. Исходный код проекта, включая его верстку и логику, открыт для просмотра в репозитории",
+    "description": "Сайт представляет собой интерактивный прототип интернет-магазина пиццы с функционалом выбора товаров и оформления заказа.",
     "technologies": [
       "TypeScript",
       "React",
@@ -24,7 +24,7 @@
     "imageUrl": "/project_scrin/aiGeneratorImage.png",
     "imageMiniUrl": "/mini_site_pages/aiGeneratorImage.png",
     "title": "AI-text-image-generate",
-    "description": "Сайт представляет собой веб-приложение для генерации изображений через нейросеть, демонстрирующее работу с внешним AI-API. Исходный код проекта с реализацией запросов и обработки ответов доступен в репозитории",
+    "description": "Сайт представляет собой веб-приложение для генерации изображений через нейросеть, демонстрирующее работу с внешним AI-API.",
     "technologies": [
       "TypeScript",
       "React",
@@ -43,7 +43,7 @@
     "id": 3,
     "imageUrl": "/project_scrin/analyz.png",
     "imageMiniUrl": "/mini_site_pages/text_analysis.png",
-    "description": "Сайт представляет собой инструмент для анализа введенного текста, который подсчитывает слова, символы и другие статистические метрики. Исходный код проекта с реализацией логики обработки данных и интерфейса доступен в репозитории",
+    "description": "Сайт представляет собой инструмент для анализа введенного текста, который подсчитывает слова, символы и другие статистические метрики.",
     "title": "Text-analyzer",
     "technologies": ["React", "TypeScript", "Vite", "HTML5", "CSS3"],
     "links": {
@@ -55,7 +55,7 @@
     "id": 4,
     "imageUrl": "/project_scrin/divisima.png",
     "imageMiniUrl": "/mini_site_pages/divisima.png",
-    "description": "Сайт представляет собой полнофункциональный интернет-магазин с адаптивным дизайном, корзиной товаров и административной панелью для управления контентом. Исходный код проекта, реализующий логику frontend и backend, доступен в репозитории",
+    "description": "Сайт представляет собой полнофункциональный интернет-магазин с адаптивным дизайном, корзиной товаров и административной панелью для управления контентом.",
     "title": "Divisima",
     "technologies": [
       "PHP",
@@ -75,7 +75,7 @@
     "id": 5,
     "imageUrl": "/project_scrin/React_films_ribbon.png",
     "imageMiniUrl": "/mini_site_pages/React_films_ribbon.png",
-    "description": "Сайт представляет собой одностраничное приложение (SPA) на React для поиска и фильтрации фильмов с использованием API. Исходный код проекта с компонентной структурой и управлением состоянием доступен в репозитории",
+    "description": "Сайт представляет собой одностраничное приложение (SPA) на React для поиска и фильтрации фильмов с использованием API.",
     "title": "Films-ribbon",
     "technologies": [
       "React",
@@ -95,7 +95,7 @@
     "id": 6,
     "imageUrl": "/project_scrin/Smart_task_timer.png",
     "imageMiniUrl": "/mini_site_pages/Smart_task_timer.png",
-    "description": "Сайт представляет собой умный таймер для управления задачами с функциями отслеживания времени и уведомлений. Исходный код проекта с реализацией логики таймера и интерфейса доступен в репозитории",
+    "description": "Сайт представляет собой умный таймер для управления задачами с функциями отслеживания времени и уведомлений.",
     "title": "Smart-task-timer",
     "technologies": [
       "React",
@@ -115,7 +115,7 @@
     "id": 7,
     "imageUrl": "/project_scrin/TimerTask.png",
     "imageMiniUrl": "/mini_site_pages/TimerTask.png",
-    "description": "Сайт — это веб-приложение для управления задачами и таймерами продуктивности, реализующее методы эффективного планирования времени. Исходный код проекта с компонентами интерфейса и логикой работы таймеров доступен в репозитории",
+    "description": "Сайт — это веб-приложение для управления задачами и таймерами продуктивности, реализующее методы эффективного планирования времени.",
     "title": "Timer-task",
     "technologies": ["React", "JavaScript", "Vite", "HTML5", "CSS3"],
     "links": {
@@ -127,7 +127,7 @@
     "id": 8,
     "imageUrl": "/project_scrin/Journal.png",
     "imageMiniUrl": "/mini_site_pages/Journal.png",
-    "description": "Сайт представляет собой веб-приложение для ведения личных записей с функциями создания, редактирования и хранения заметок. Исходный код проекта с реализацией интерфейса и логики управления контентом доступен в репозитории",
+    "description": "Сайт представляет собой веб-приложение для ведения личных записей с функциями создания, редактирования и хранения заметок.",
     "title": "Journal",
     "technologies": ["React", "JavaScript", "Vite", "HTML5", "CSS3"],
     "links": {
@@ -139,7 +139,7 @@
     "id": 9,
     "imageUrl": "/project_scrin/ToDoList.png",
     "imageMiniUrl": "/mini_site_pages/ToDoList.png",
-    "description": "Сайт представляет собой тестовое React-приложение для управления задачами с функциями добавления, удаления и отметки выполнения. Исходный код проекта с компонентной структурой и хуками состояния доступен в репозитории",
+    "description": "Сайт представляет собой тестовое React-приложение для управления задачами с функциями добавления, удаления и отметки выполнения.",
     "title": "To-do-list",
     "technologies": ["React", "JavaScript", "HTML5", "CSS3"],
     "links": {
@@ -151,7 +151,7 @@
     "id": 10,
     "imageUrl": "/project_scrin/addBookList.png",
     "imageMiniUrl": "/mini_site_pages/addBookList.png",
-    "description": "Сайт https://kalachinskii.github.io/addBookList представляет собой веб-приложение для управления персональной библиотекой с функциями добавления, поиска и сортировки книг. Исходный код проекта с реализацией интерфейса и логики хранения данных доступен в репозитории",
+    "description": "Сайт https://kalachinskii.github.io/addBookList представляет собой веб-приложение для управления персональной библиотекой с функциями добавления, поиска и сортировки книг.",
     "title": "Add-book-list",
     "technologies": ["JavaScript", "HTML5", "CSS3"],
     "links": {
@@ -163,7 +163,7 @@
     "id": 11,
     "imageUrl": "/project_scrin/Carolina.png",
     "imageMiniUrl": "/mini_site_pages/Carolina.png",
-    "description": "Сайт представляет собой адаптивный лендинг, созданный с использованием фреймворка Bootstrap для демонстрации возможностей верстки. Исходный код проекта с компонентами и стилями доступен в репозитории",
+    "description": "Сайт представляет собой адаптивный лендинг, созданный с использованием фреймворка Bootstrap для демонстрации возможностей верстки.",
     "title": "Carolinas Hall",
     "technologies": ["Bootstrap", "SCSS", "HTML5", "CSS3"],
     "links": {
@@ -175,7 +175,7 @@
     "id": 12,
     "imageUrl": "/project_scrin/Bhagaskara.png",
     "imageMiniUrl": "/mini_site_pages/Bhagaskara.png",
-    "description": "Сайт представляет собой современный адаптивный лендинг для бизнеса, созданный с использованием HTML5, CSS3 и JavaScript. Исходный код проекта с реализацией интерактивных элементов и верстки доступен в репозитории",
+    "description": "Сайт представляет собой современный адаптивный лендинг для бизнеса, созданный с использованием HTML5, CSS3 и JavaScript.",
     "title": "Bhagaskara",
     "technologies": ["JavaScript", "SCSS", "HTML5", "CSS3"],
     "links": {
@@ -187,7 +187,7 @@
     "id": 13,
     "imageUrl": "/project_scrin/red_explorers.png",
     "imageMiniUrl": "/mini_site_pages/red_explorers.png",
-    "description": "Сайт представляет собой адаптивный лендинг туристической тематики, сверстанный с использованием технологии Flexbox. Исходный код проекта с примерами реализации гибкой модульной сетки доступен в репозитории",
+    "description": "Сайт представляет собой адаптивный лендинг туристической тематики, сверстанный с использованием технологии Flexbox.",
     "title": "Red explorers",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -199,7 +199,7 @@
     "id": 14,
     "imageUrl": "/project_scrin/Deliver_X.png",
     "imageMiniUrl": "/mini_site_pages/Deliver_X.png",
-    "description": "Сайт представляет собой многостраничный лендинг службы доставки с адаптивным дизайном, формой заказа и интерактивными элементами. Исходный код проекта с вёрсткой и клиентской логикой доступен в репозитории",
+    "description": "Сайт представляет собой многостраничный лендинг службы доставки с адаптивным дизайном, формой заказа и интерактивными элементами.",
     "title": "Deliver X",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -212,7 +212,7 @@
     "id": 15,
     "imageUrl": "/project_scrin/gtp3.png",
     "imageMiniUrl": "/mini_site_pages/gtp3.png",
-    "description": "Сайт представляет собой современный адаптивный лендинг, посвященный технологии GPT-3, с интерактивными элементами и анимациями. Исходный код проекта с реализацией компонентов и стилей доступен в репозитории",
+    "description": "Сайт представляет собой современный адаптивный лендинг, посвященный технологии GPT-3, с интерактивными элементами и анимациями.",
     "title": "GPT-3",
     "technologies": ["Bootstrap", "HTML5", "CSS3"],
     "links": {
@@ -224,7 +224,7 @@
     "id": 16,
     "imageUrl": "/project_scrin/landguru.png",
     "imageMiniUrl": "/mini_site_pages/landguru.png",
-    "description": "Сайт представляет собой адаптивный лендинг для цифрового сервиса, созданный с использованием современного стека веб-технологий. Исходный код проекта с компонентной структурой и стилизацией доступен в репозитории",
+    "description": "Сайт представляет собой адаптивный лендинг для цифрового сервиса, созданный с использованием современного стека веб-технологий.",
     "title": "Landguru",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -236,7 +236,7 @@
     "id": 17,
     "imageUrl": "/project_scrin/rusbir.png",
     "imageMiniUrl": "/mini_site_pages/rusbir.png",
-    "description": "Сайт представляет собой лендинг для бизнеса или услуги, созданный с использованием современных веб-технологий. Исходный код проекта с реализацией адаптивного дизайна и интерактивных элементов доступен в репозитории",
+    "description": "Сайт представляет собой лендинг для бизнеса или услуги, созданный с использованием современных веб-технологий.",
     "title": "Rusbir",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -249,7 +249,7 @@
     "id": 18,
     "imageUrl": "/project_scrin/instaboti.png",
     "imageMiniUrl": "/mini_site_pages/instaboti.png",
-    "description": "Сайт представляет собой лендинг для сервиса автоматизации Instagram с описанием функционала и преимуществ. Исходный код проекта с реализацией адаптивного интерфейса и интерактивных элементов доступен в репозитории",
+    "description": "Сайт представляет собой лендинг для сервиса автоматизации Instagram с описанием функционала и преимуществ.",
     "title": "Instaboti",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -261,7 +261,7 @@
     "id": 19,
     "imageUrl": "/project_scrin/ParalaxEff.png",
     "imageMiniUrl": "/mini_site_pages/ParalaxEff.png",
-    "description": "Сайт представляет собой интерактивный лендинг с параллакс-эффектом, где движение курсора создает иллюзию плавания лодки по воде. Исходный код проекта с реализацией анимаций на чистом JavaScript и CSS доступен в репозитории",
+    "description": "Сайт представляет собой интерактивный лендинг с параллакс-эффектом, где движение курсора создает иллюзию плавания лодки по воде.",
     "title": "Paralax-effect",
     "technologies": ["JavaScript", "HTML5", "CSS3"],
     "links": {
