--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,6 +1,51 @@
 [
   {
     "id": 1,
+    "imageUrl": "/project_scrin/kanban.png",
+    "imageMiniUrl": "/mini_site_pages/kanban.png",
+    "title": "Kanban Board - Team Project",
+    "description": "Командная разработка канбан-доски в составе 6 человек. В качестве одного из контрибьюторов отвечал за проектирование архитектуры компонентов и системы тем оформления.",
+    "technologies": [
+      "TypeScript",
+      "React",
+      "Redux Toolkit",
+      "React Router DOM",
+      "React DnD (Drag & Drop)",
+      "React Hook Form",
+      "Zod (валидация)",
+      "Axios (HTTP клиент)",
+      "Vite",
+      "ESLint + Prettier",
+      "React Content Loader"
+    ],
+    "links": {
+      "site": "https://it-park-kanban-tasks.vercel.app/",
+      "git": "https://github.com/Noga-Ekaterina/it-park_Kanban-tasks"
+    }
+  },
+  {
+    "id": 2,
+    "imageUrl": "/project_scrin/rpg.png",
+    "imageMiniUrl": "/mini_site_pages/rpg.png",
+    "title": "Phaser RPG Demo",
+    "description": "Демо-версия пиксельной RPG игры с системой перемещения, боем, AI противников и переходами между локациями. Интеграция игрового движка Phaser 3 с React.",
+    "technologies": [
+      "TypeScript",
+      "React",
+      "Phaser 3",
+      "React Router",
+      "Vite",
+      "GitHub Actions",
+      "CSS Modules",
+      "HTML5 Canvas"
+    ],
+    "links": {
+      "site": "https://kalachinskii.github.io/portfolio-phaser/",
+      "git": "https://github.com/Kalachinskii/portfolio-phaser"
+    }
+  },
+  {
+    "id": 3,
     "imageUrl": "/project_scrin/pizza.png",
     "imageMiniUrl": "/mini_site_pages/pizza.png",
     "title": "Pizza",
@@ -20,7 +65,7 @@
     }
   },
   {
-    "id": 2,
+    "id": 4,
     "imageUrl": "/project_scrin/aiGeneratorImage.png",
     "imageMiniUrl": "/mini_site_pages/aiGeneratorImage.png",
     "title": "AI-text-image-generate",
@@ -40,7 +85,7 @@
     }
   },
   {
-    "id": 3,
+    "id": 5,
     "imageUrl": "/project_scrin/analyz.png",
     "imageMiniUrl": "/mini_site_pages/text_analysis.png",
     "description": "Сайт представляет собой инструмент для анализа введенного текста, который подсчитывает слова, символы и другие статистические метрики.",
@@ -52,7 +97,7 @@
     }
   },
   {
-    "id": 4,
+    "id": 6,
     "imageUrl": "/project_scrin/divisima.png",
     "imageMiniUrl": "/mini_site_pages/divisima.png",
     "description": "Сайт представляет собой полнофункциональный интернет-магазин с адаптивным дизайном, корзиной товаров и административной панелью для управления контентом.",
@@ -72,7 +117,7 @@
     }
   },
   {
-    "id": 5,
+    "id": 7,
     "imageUrl": "/project_scrin/React_films_ribbon.png",
     "imageMiniUrl": "/mini_site_pages/React_films_ribbon.png",
     "description": "Сайт представляет собой одностраничное приложение (SPA) на React для поиска и фильтрации фильмов с использованием API.",
@@ -92,7 +137,7 @@
     }
   },
   {
-    "id": 6,
+    "id": 8,
     "imageUrl": "/project_scrin/Smart_task_timer.png",
     "imageMiniUrl": "/mini_site_pages/Smart_task_timer.png",
     "description": "Сайт представляет собой умный таймер для управления задачами с функциями отслеживания времени и уведомлений.",
@@ -112,7 +157,7 @@
     }
   },
   {
-    "id": 7,
+    "id": 9,
     "imageUrl": "/project_scrin/TimerTask.png",
     "imageMiniUrl": "/mini_site_pages/TimerTask.png",
     "description": "Сайт — это веб-приложение для управления задачами и таймерами продуктивности, реализующее методы эффективного планирования времени.",
@@ -124,7 +169,7 @@
     }
   },
   {
-    "id": 8,
+    "id": 10,
     "imageUrl": "/project_scrin/Journal.png",
     "imageMiniUrl": "/mini_site_pages/Journal.png",
     "description": "Сайт представляет собой веб-приложение для ведения личных записей с функциями создания, редактирования и хранения заметок.",
@@ -136,7 +181,7 @@
     }
   },
   {
-    "id": 9,
+    "id": 11,
     "imageUrl": "/project_scrin/ToDoList.png",
     "imageMiniUrl": "/mini_site_pages/ToDoList.png",
     "description": "Сайт представляет собой тестовое React-приложение для управления задачами с функциями добавления, удаления и отметки выполнения.",
@@ -148,7 +193,7 @@
     }
   },
   {
-    "id": 10,
+    "id": 12,
     "imageUrl": "/project_scrin/addBookList.png",
     "imageMiniUrl": "/mini_site_pages/addBookList.png",
     "description": "Сайт https://kalachinskii.github.io/addBookList представляет собой веб-приложение для управления персональной библиотекой с функциями добавления, поиска и сортировки книг.",
@@ -160,7 +205,7 @@
     }
   },
   {
-    "id": 11,
+    "id": 13,
     "imageUrl": "/project_scrin/Carolina.png",
     "imageMiniUrl": "/mini_site_pages/Carolina.png",
     "description": "Сайт представляет собой адаптивный лендинг, созданный с использованием фреймворка Bootstrap для демонстрации возможностей верстки.",
@@ -172,7 +217,7 @@
     }
   },
   {
-    "id": 12,
+    "id": 14,
     "imageUrl": "/project_scrin/Bhagaskara.png",
     "imageMiniUrl": "/mini_site_pages/Bhagaskara.png",
     "description": "Сайт представляет собой современный адаптивный лендинг для бизнеса, созданный с использованием HTML5, CSS3 и JavaScript.",
@@ -184,7 +229,7 @@
     }
   },
   {
-    "id": 13,
+    "id": 15,
     "imageUrl": "/project_scrin/red_explorers.png",
     "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "description": "Сайт представляет собой адаптивный лендинг туристической тематики, сверстанный с использованием технологии Flexbox.",
@@ -196,7 +241,7 @@
     }
   },
   {
-    "id": 14,
+    "id": 16,
     "imageUrl": "/project_scrin/Deliver_X.png",
     "imageMiniUrl": "/mini_site_pages/Deliver_X.png",
     "description": "Сайт представляет собой многостраничный лендинг службы доставки с адаптивным дизайном, формой заказа и интерактивными элементами.",
@@ -207,9 +252,8 @@
       "git": "https://github.com/Kalachinskii/Deliver_X"
     }
   },
-
   {
-    "id": 15,
+    "id": 17,
     "imageUrl": "/project_scrin/gtp3.png",
     "imageMiniUrl": "/mini_site_pages/gtp3.png",
     "description": "Сайт представляет собой современный адаптивный лендинг, посвященный технологии GPT-3, с интерактивными элементами и анимациями.",
@@ -221,7 +265,7 @@
     }
   },
   {
-    "id": 16,
+    "id": 18,
     "imageUrl": "/project_scrin/landguru.png",
     "imageMiniUrl": "/mini_site_pages/landguru.png",
     "description": "Сайт представляет собой адаптивный лендинг для цифрового сервиса, созданный с использованием современного стека веб-технологий.",
@@ -233,7 +277,7 @@
     }
   },
   {
-    "id": 17,
+    "id": 19,
     "imageUrl": "/project_scrin/rusbir.png",
     "imageMiniUrl": "/mini_site_pages/rusbir.png",
     "description": "Сайт представляет собой лендинг для бизнеса или услуги, созданный с использованием современных веб-технологий.",
@@ -244,9 +288,8 @@
       "git": "https://github.com/Kalachinskii/rusbir"
     }
   },
-
   {
-    "id": 18,
+    "id": 20,
     "imageUrl": "/project_scrin/instaboti.png",
     "imageMiniUrl": "/mini_site_pages/instaboti.png",
     "description": "Сайт представляет собой лендинг для сервиса автоматизации Instagram с описанием функционала и преимуществ.",
@@ -258,7 +301,7 @@
     }
   },
   {
-    "id": 19,
+    "id": 21,
     "imageUrl": "/project_scrin/ParalaxEff.png",
     "imageMiniUrl": "/mini_site_pages/ParalaxEff.png",
     "description": "Сайт представляет собой интерактивный лендинг с параллакс-эффектом, где движение курсора создает иллюзию плавания лодки по воде.",
